--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
+    position: fixed;
+    width: 100%;
+    margin-top: 0;
 }
 .container-logo{
     display: flex;
@@ -30,9 +33,10 @@ nav>a:hover{
     padding: 11px 2%;
     background-color: #edeaea;
     width: 80%;
-    margin: 12px auto;
+    margin: 5px auto;
     border-radius: 5px;
     border: 2px solid #e1e1e1;
+    margin-top: 0;
 }
 p{
     text-align: justify;
